# dnd_dice_tools

./: LICENSE  README.md  pyproject.toml
dnd_odds/: odds.py
tests/: test_dnd_odds.py
