[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
# original backend without dynamic versioning: build-backend = "poetry.core.masonry.api"
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "dnd_dice_tools"
# placeholder version
version = "0.0.0"
description = ""
authors = ["Blake Kirkland <jbkirkland708@gmail.com>"]
readme = "README.md"
packages = [{include = "dnd_odds"}]

[tool.pytest.ini_options]
addopts = "--cov --cov-report html --cov-report term-missing --cov-fail-under 95"
pythonpath = [
  ".", "dnd_odds"
]

[tool.coverage.run]
source = ["dnd_odds"]

[tool.yapf]
blank_line_before_nested_class_or_def = true
column_limit = 88

[tool.pylint]
max-line-length = 127
disable = [
    "E1101" # Used when a variable is accessed for a nonexistent member.
    
]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.poetry.dependencies]
python = "^3.9"
poetry-dynamic-versioning = {extras = ["plugin"], version = "^0.21.1"}
python-dotenv = "^0.21.0"
numpy = "^1.21"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
pylint = "^2.17.2"
toml = "^0.10.2"
yapf = "^0.32.0"


[tool.poetry.scripts]
single-die-odds = "dnd_odds.odds:main"
